
Version 1.0.2, Aug 3, 2006
-------------------------------

XML:   Resolved issue CASTOR-1483 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed NullPointerException at generation of mapping.
       Details: http://jira.codehaus.org/browse/CASTOR-1483
       (Ralf - 20060801)

XML:   Fixed bug CASTOR-1482 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem related to MapItem class and namespaces
       Details: http://jira.codehaus.org/browse/CASTOR-1482
       (Werner - 20060801)

All:   Resolved issue CASTOR-1484 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Seperated responsibilities of AbstractMappingLoader for holding its current state and generation of descriptors.
       Details: http://jira.codehaus.org/browse/CASTOR-1484
       (Ralf - 20060731)

XML:   Fixed bug CASTOR-447 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added validation of min/maxLength facets for xs:NMTOKEN
       Details: http://jira.codehaus.org/browse/CASTOR-447
       (Werner - 20060726)

XML:   Fixed bug CASTOR-721 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with support for final modifier at the class level during source generation.
       Details: http://jira.codehaus.org/browse/CASTOR-721
       (Werner - 20060726)

XML:   Fixed bug CASTOR-786 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Removed unnecessary import statements addition for java.io.* during source generation
       Details: http://jira.codehaus.org/browse/CASTOR-786
       (Werner - 20060726)

JDO:   Fixed bug CASTOR-1479 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Made EmptyEnumerator implement java.io.Serializable.
       Details: http://jira.codehaus.org/browse/CASTOR-147X
       (Werner - 20060725)

JDO:   Resolved issue CASTOR-1476 using contribution from Dave Brosius [dbrosius@mebigfatguy.com]